# local-code

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
assets/: mascot.txt
docs/superpowers/plans/: 2026-07-06-benchmarking-quality-fuzzing.md  2026-07-06-core-agent-loop.md  2026-07-06-flat-file-memory.md  2026-07-06-foundation-config-connections.md  2026-07-06-mcp-client.md  2026-07-06-slash-commands-and-persistence.md  2026-07-06-tui-shell.md  2026-07-08-github-skill-download.md
docs/superpowers/specs/: 2026-07-06-local-code-tui-design.md  2026-07-08-github-skill-download-design.md
src/: lib.rs  main.rs
src/agent/: build.rs  gated_tool.rs  headless.rs  mod.rs  provider.rs  skill_tool.rs  tools.rs
src/cli/: connections.rs  mcp.rs  memory.rs  mod.rs  secret.rs  skills.rs
src/config/: connection.rs  mcp_servers.rs  mod.rs  pass_backend.rs  paths.rs  secrets.rs
src/context/: mod.rs
src/init/: generate.rs  mod.rs  prompt.rs  survey.rs
src/mcp/: connect.rs  fixture_server.rs  mod.rs  tool.rs
src/memory/: buffer.rs  core.rs  mod.rs  paths.rs  rollup.rs  search.rs
src/permissions/: gate.rs  mod.rs  settings.rs  stdio.rs  types.rs
src/session/: mod.rs  paths.rs  store.rs  types.rs
src/skills/: bitbucket.rs  client.rs  discovery.rs  frontmatter.rs  github.rs  gitlab.rs  install.rs  mod.rs  spec.rs  types.rs
src/tui/: app.rs  gated_tool.rs  mcp_wizard.rs  memory_seed.rs  mod.rs  permission_prompter.rs  rebuild.rs  slash.rs  state.rs  test_support.rs  theme.rs
src/tui/components/: dashboard.rs  footer.rs  header.rs  input_box.rs  mod.rs  permission_card.rs  status_indicator.rs  transcript.rs
src/tui/workspace/: mod.rs  state.rs  tab_bar.rs
tests/: live_compact.rs  live_init.rs  live_ollama.rs  live_openai_compatible.rs  mcp_add_live_reconnect.rs  mcp_stdio_integration.rs  pass_backend_roundtrip.rs
