[package]
name = "local-code"
version = "0.1.0"
edition = "2024"

[lib]
name = "local_code"
path = "src/lib.rs"

[[bin]]
name = "local-code"
path = "src/main.rs"

[dependencies]
ntui = "0.1.2"
ntui-macros = "0.1.0"
directories = "6.0"
serde = { version = "1", features = ["derive", "rc"] }
toml = "1"
clap = { version = "4", features = ["derive"] }
rpassword = "7"
thiserror = "2"
anyhow = "1"
daimon = { version = "0.22.0", features = ["local", "macros", "mcp"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
regex = "1"
walkdir = "2"
glob = "0.3"
futures = "0.3.32"
chrono = { version = "0.4", features = ["clock"] }
ignore = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

# All non-mac unix (Linux, BSDs): Secret Service as the primary backend,
# with pass (the standard unix password manager) as the fallback when no
# Secret Service daemon is running — see config::pass_backend.
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
pass-sys = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
wiremock = "0.6"
